# hupa

./: Cargo.toml  LICENSE  README.md  build.rs
cli/: Cargo.toml
cli/src/: .main.rs.rustfmt  add.rs  backup.rs  clean.rs  common.rs  config.rs  hupa.rs  io.rs  macros.rs  main.rs  modify.rs  print.rs  remove.rs  restore.rs  show.rs  vars.rs
daemon/: Cargo.toml
daemon/src/: main.rs
lib/: Cargo.toml
lib/src/: category.rs  config.rs  error.rs  fs_extra.rs  hupa.rs  lib.rs  vars.rs
lib/src/hupa/: mod.rs  unix.rs
lib/src/metadata/: json.rs  mod.rs
src/: .metadata.rs.rustfmt  error.rs  fs_extra.rs  hupa.rs  lib.rs  main.rs
src/metadata/: json.rs  mod.rs
