[package]
name = "hupa"
version = "0.1.0"
authors = ["notkild <notkild@gmail.com>"]
build = "build.rs"

[dependencies]
app_dirs = "1.1"
clap = "2.21"
colored = "1.4"
error-chain = "0.10"
fs_extra = "1.0"
humansize = "1.0"
json = { version = "0.11", optional = true }

[features]
default = ["text-json"]
text-json = ["json"]

[[bin]]
name = "hupa"
doc = false
